# TextToSpeechPython

./: .gitignore  .pylintrc  LICENSE  Pipfile  README.md  TextToSpeech.spec  pyproject.toml  requirements.txt  setup.py
app/: main.py  mylib.py
app/assets/styles/: styles.qss
app/controller/: background_workers.py  compute_controller.py  main_controller.py  second_controller.py  settings_controller.py
app/data/: sample.pptx
app/gui/: app_window.py  main_window.py  second_window.py  settings_dialog.py  setup_guide_dialog.py  ui_compute_window.py  ui_main_window.py  ui_second_window.py
app/gui/main_window/: main_app.py
app/gui/second_window/: second_app.py
app/model/: app_settings.py
app/model/api/: api_config.py  azure_tts_api.py  gemini_config.py  local_tts_config.py  polly_config.py
app/model/processors/: data_processor.py  ssml_audio_processor.py  tts_processor.py
app/model/scraper/: __init__.py  document_scraper.py  pptx_scraper.py
app/model/ssml/: narration_markup.py  ssml_audio_effects.py  ssml_config.py  ssml_voice_effects.py  text_to_ssml.py  voices.py
app/model/tts_providers/: __init__.py  azure_provider.py  factory.py  gemini_provider.py  local_provider.py  models.py  polly_provider.py  provider_catalog.py  voice_catalog.py
app/modules/: main.py
app/modules/api/: api_config.py
app/modules/ssml/: ssml_audio_effects.py  ssml_audio_processor.py  ssml_config.py  ssml_voice_effects.py  text_to_ssml.py
app/utils/: __init__.py  logging_config.py  resources.py  text_cleaner.py
data/static/: README.md
data/static/epub/: basic.epub
data/static/html/: basic.html  no_title.html
data/static/plain/: basic.txt  unicode.txt
data/static/pptx/: basic_notes.pptx  notes_only.pptx
data/static/rtf/: basic.rtf
data/static/spreadsheet/: basic.csv  basic.xlsx  multi_sheet.xlsx
data/static/word/: basic.docx  tables.docx
docs/: api_config.md  documentation.md  gemini_config.md  gui.rst  index.rst  local_tts_config.md  polly_config.md  setup_guide.md  ssml_attributes.md
scripts/: build_windows_exe.ps1
tests/: conftest.py  test_background_workers.py  test_document_scraper.py  test_gemini_config.py  test_local_tts_config.py  test_main_controller_history.py  test_main_controller_ssml.py  test_polly_config.py  test_qt_interaction_flows.py  test_resources.py  test_second_controller_import.py  test_settings_dialog_providers.py  test_tts_provider_architecture.py
