[project]
name = "texttospeechpython"
version = "0.1.4"
description = "PyQt desktop app for experimenting with Azure text-to-speech and SSML workflows."
readme = "README.md"
authors = [{ name = "Thaddeus Thomas" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "azure-cognitiveservices-speech",
    "beautifulsoup4",
    "ebooklib",
    "loguru",
    "openpyxl",
    "pandas",
    "pillow",
    "pypdfium2",
    "pypdf",
    "pytesseract",
    "pyqt6",
    "python-docx",
    "python-pptx",
    "striprtf",
    "xlrd",
    "xlsxwriter",
]

[project.scripts]
tts-app = "app.main:main"

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
azure-cognitiveservices-speech = "*"
beautifulsoup4 = "*"
ebooklib = "*"
loguru = "*"
openpyxl = "*"
pandas = "*"
pillow = "*"
pypdfium2 = "*"
pypdf = "*"
pytesseract = "*"
pyqt6 = "*"
python-docx = "*"
python-pptx = "*"
striprtf = "*"
xlrd = "*"
xlsxwriter = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
